syntax = "proto3";

package neuroplc;

message ProtocolVersion {
  uint32 major = 1;
  uint32 minor = 2;
}

message Hello {
  ProtocolVersion protocol_version = 1;
  repeated string capabilities = 2;
  optional string client_id = 3;
}

message Recommendation {
  ProtocolVersion protocol_version = 1;
  uint64 sequence = 2;
  uint64 issued_at_unix_us = 3;
  uint64 ttl_ms = 4;
  optional double target_speed_rpm = 5;
  float confidence = 6;
  string reasoning_hash = 7;
  optional uint64 client_unix_us = 8;
  optional string auth_token = 9;
}

message State {
  ProtocolVersion protocol_version = 1;
  uint64 sequence = 2;
  uint64 timestamp_us = 3;
  uint64 cycle_count = 4;
  string safety_state = 5;
  uint64 unix_us = 6;
  double motor_speed_rpm = 7;
  double motor_temp_c = 8;
  double pressure_bar = 9;
  uint32 cycle_jitter_us = 10;
}

message WireMessage {
  oneof payload {
    Hello hello = 1;
    Recommendation recommendation = 2;
    State state = 3;
  }
}
